<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_meeting_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.AddMeeting">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/add_meeting_appbar_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/add_meeting_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/MaReu.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/color_meeting"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/lightPink"
                tools:ignore="ContentDescription" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_subject_layout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/meeting_subject_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:backgroundTint="@color/backgroundWhite"
                    android:ellipsize="start"
                    android:gravity="center_horizontal"
                    android:hint="@string/meeting_subject"
                    android:inputType="textMultiLine"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    tools:ignore="Autofill"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_lyt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/meeting_date_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="10dp"
                    android:text="@string/meeting_date"
                    android:textSize="20sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/date_picker_txt"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/meeting_day"
                    android:textSize="15sp" />

                <!--<DatePicker
                    android:id="@+id/meeting_date_picker"
                    style="@style/date_picker_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:maxDate="2100"
                    android:minDate="2020" />-->
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_start_date_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/meeting_end_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:text="@string/meeting_start_date"
                    android:textSize="20sp" />


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/start_time_picker_txt"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/meeting_start_time"
                    android:textSize="15sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_end_date_layout"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp">


                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/meeting_end_time_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/meeting_end_date"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/end_time_picker_txt"
                    style="@android:style/Widget.Holo.Light.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:text="@string/meeting_end_time"
                    android:textSize="15sp" />

                <!--><Button
                     android:id="@+id/end_time_button"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:backgroundTint="@color/colorPrimary"
                     android:hint="@string/endTimeMeeting"
                     android:textColorHint="@color/backgroundWhite" />-->

                <!-- <TimePicker
                    android:id="@+id/meeting_end_time_picker"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:timePickerMode="spinner" />-->
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/meeting_room_layout"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <Spinner
                    android:id="@+id/meeting_room_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_spinner" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/guest_text_input_layout"
                android:layout_width="300dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp">

                <MultiAutoCompleteTextView
                    android:id="@+id/guest_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/backgroundWhite"
                    android:hint="@string/meeting_guests"
                    android:textColor="@color/black" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/meeting_save"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/meeting_save" />


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>