<resources>
    <string name="app_name">MaReu</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meeting_date">Date de la réunion</string>
    <string name="meeting_start_date">Heure de début de la réunion</string>
    <string name="meeting_guests">Participants à la réunion</string>
    <string name="meeting_save">Enregistrer</string>
    <string name="meeting_end_date">Heure de fin de la réunion</string>
    <string name="meeting_subject">Sujet de la réunion</string>
    <string name="startTimeMeeting">Début de la réunion</string>
    <string name="endTimeMeeting">Fin de la réunion</string>
    <string name="meeting_end_time">Entrez l\'heure de fin de la réunion</string>
    <string name="room_time_subject">Salle - Heure - Sujet</string>
    <string name="meeting_day_date">14 mai 2020</string>
    <string name="meeting_day">Jour de la réunion</string>
    <string name="meeting_start_time">Entrez l\'heure de début de la réunion</string>
    <string name="toast_invalid_form">Il faut remplir tout les champs</string>
    <string name="toast_invalid_hours">Veuillez vérifier les heures de début et de fin</string>
    <string name="filter_date_item">Filtrer par date</string>
    <string name="filter_room_item">Filtrer par salle</string>
    <string name="reset_item">Reset</string>
</resources>
