<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.mareu.view.ListActivity">
    <item
        android:id="@+id/menu_overflow_button_filter"
        android:icon="@drawable/ic_menu_black_24dp"
        app:showAsAction="ifRoom"
        tools:ignore="MenuTitle">

        <menu>

            <item
                android:id="@+id/filterDate"
                android:orderInCategory="100"
                android:title="@string/filter_date_item"
                app:showAsAction="never" />

            <item
                android:id="@+id/filterLocation"
                android:orderInCategory="200"
                android:title="@string/filter_room_item" />

            <item
                android:id="@+id/filterReset"
                android:orderInCategory="300"
                android:title="@string/reset_item" />


        </menu>
    </item>


</menu>
